Add middleware, nodemailer, and CRUD jenis kendaraan
